# bulk-hospital-processor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  extensions.py
app/api/: routes.py  schemas.py
app/core/: batch_processor.py  csv_parser.py  exceptions.py  hospital_client.py
app/models/: batch.py
app/repositories/: batch_repository.py
migrations/versions/: 3282330f7855_initial.py
tests/: conftest.py
tests/fixtures/: invalid.csv  sample.csv
tests/integration/: test_api.py
tests/unit/: test_batch_processor.py  test_csv_parser.py
