[tool.poetry]
name = "bulk-hospital-processor"
version = "0.1.0"
description = "A bulk-processing Flask service for a Hospital Directory API."
authors = ["Aman <aman16sep2k@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.3"
Werkzeug = "3.0.3"
gunicorn = "22.0.0"
requests = "2.32.3"
httpx = "0.27.0"
Flask-SQLAlchemy = "3.1.1"
SQLAlchemy = "2.0.30"
Flask-Migrate = "4.0.7"
psycopg2-binary = "2.9.9"
marshmallow = "^4.3.0"
python-dotenv = "1.0.1"
tenacity = "8.3.0"
flask-smorest = "^0.47.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-flask = "1.3.0"
responses = "0.25.0"
ruff = "0.4.8"
mypy = "1.10.0"
types-requests = "2.32.0.20240602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
